added comment model;

--- a/mysite/templates/blog/post_list.html
+++ b/mysite/templates/blog/post_list.html
@@ -4,7 +4,7 @@
   {% for post in object_list %}
     <div class="blog-post">
       <h2 class="blog-post-title">{{ post.title }}</h2>
-      <p class="blog-post-meta">{{ post.datetime }} <a href="#">Mark</a></p>
+      <p class="blog-post-meta">{{ post.datetime }} <a href="#">{{ post.author.get_username }}</a></p>
 
       <div>{{ post.content|safe }}</div>
 
