--- a/mysite/blog/templates/blog/post_list.html
+++ b/mysite/blog/templates/blog/post_list.html
@@ -4,6 +4,6 @@
     <h2><a href="{{ post.get_absolute_url }}"> {{ post.title }} </a></h2>
     <p>{{ post.content }}</p>
   {% empty %}
-    <p>Нет записей</p>    
+    <p>No entries</p>    
   {% endfor %}
 {% endblock %}
