--- a/mysite/templates/index.html
+++ b/mysite/templates/index.html
@@ -51,7 +51,7 @@
             <div class="sidebar-module sidebar-module-inset">
               {% if request.user.is_authenticated %}
                 <p>Welcome '{{ request.user.get_username }}'</p>
-                <a href="{% url 'logout' %}">Logout</a>
+                <a href="{% url 'logout' %}?next={% url 'login' %}">Logout</a>
               {% else %}
                 <a href="{% url 'login' %}">Login</a>
               {% endif %}
